tests/skip/duplicate-specifier.stderr
error: encountered duplicate #[skip(getters)]
 --> tests/skip/duplicate-specifier.rs:5:7
  |
5 |     #[skip(getters, getters)]
  |       ^^^^^^^^^^^^^^^^^^^^^^

error: previous found here
 --> tests/skip/duplicate-specifier.rs:5:7
  |
5 |     #[skip(getters, getters)]
  |       ^^^^^^^^^^^^^^^^^^^^^^
